--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Kinwa market - visita nuestra nueva tienda virtual"
     />
+    <meta name="author" content="codechappie">
+    <meta name="keywords" content="kinwa, market, kinwa market, tienda virtual, peru, codechappie">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Watsy</title>
+    <title>Kinwa market</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -44,3 +46,4 @@
     -->
   </body>
 </html>
+  
